feat: ranker, admin API, connection lifecycle, and cleanup phases
Squashes 15 commits covering the entire admin/ranking arc.

- CoinGecko ranker: HTTP fetch + stablecoin/wrapped filter + YAML
  fallback; SymbolRegistry + TrackedSymbolsStore + FilterStore
  (admin_removed_symbols tombstones); periodic RankingRefreshScheduler
  (add-only, tombstone-aware)
- Admin API: /admin/symbols (GET / PUT / PATCH), /admin/filters
  (GET / PUT / PATCH), shared validator pipeline (SymbolValidator,
  TickerValidator, TickerFormatValidator with underscore support);
  optional X-Admin-Key auth (timing-safe compare); configurable
  CORS middleware
- HTTP: switch handlers to async on a shared virtual-thread executor;
  QUOTES_HTTP_TIMEOUT_MS with CompletableFuture.orTimeout + explicit
  cancellation; bump Javalin 6.1.6 → 6.7.0, Jetty 11.0.20 → 11.0.25
- Storage: SqliteConnectionProvider centralises DB lifecycle and
  read-only history connection
- Robustness: connect timeouts, full stack logging, race fixes;
  SymbolValidator regex accepts underscore in base ticker (e.g.
  FIGR_HELOCUSDT); QuotePipelineIT.fullFlow stabilised
- Redundancy: phase-3/4 audit cleanups, FilterStore API trim,
  replyServerError tightened to SQLException, replyBadRequest helper
  consolidating 10 BAD_REQUEST sites, dead null/blank guards dropped
  from store applyPatch/replace, TestSupport for shared test fixtures
  (fastBackoff, rowCount, quote), MockBinanceWsServerTest removed,
  .env.example synced with AppConfig
- Docs: README updated for admin API + ranking model + 10-min perf
  findings; redundant "Why this is fast" and duplicate Known-Limitations
  bullets dropped; shutdown-hook historic-narrative wording removed